fix(TUP-23363)'save the property' to metadata get error

--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_ja.properties
@@ -122,7 +122,7 @@ AbstractComponentsProvider.folderNotExist=\u30D5\u30A9\u30EB\u30C0 {0} \u304C\u5
 AbstractItemMigrationTask.taskFailed=\u79FB\u884C\u30BF\u30B9\u30AF{0}\u304C\u30A2\u30A4\u30C6\u30E0{1}\u3067\u5931\u6557\u3057\u307E\u3057\u305F
 ColumnNameChangedExt.columnChanged=\u30CE\u30FC\u30C9: {0} \u30AB\u30E9\u30E0\u304C\u5909\u66F4\u3055\u308C\u307E\u3057\u305F : {1}-> {2}
 ComponentToRepositoryProperty.error=\u30A8\u30E9\u30FC
-ComponentToRepositoryProperty.ImpossibleUseOCI=\u30EA\u30DD\u30B8\u30C8\u30EA\u3067OCI\u30BF\u30A4\u30D7\u306F\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
+ComponentToRepositoryProperty.ImpossibleUseOCI=\u30EA\u30DD\u30B8\u30C8\u30EA\u3067WALLET\u30BF\u30A4\u30D7\u306F\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
 ContextComposite.tableValue=\u30C6\u30FC\u30D6\u30EB\u306E\u5024
 ContextComposite.treeValue=\u30C4\u30EA\u30FC\u306E\u5024
 ContextComposite.variable=\u5909\u6570
