--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_pt_BR.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_pt_BR.properties
@@ -58,7 +58,7 @@ AbstractComponentsProvider.folderNotExist=Diret\u00F3rio {0} n\u00E3o existe.
 AbstractItemMigrationTask.taskFailed=Tarefa de migra\u00E7\u00E3o {0} falhou no item {1}
 ColumnNameChangedExt.columnChanged=Nodo: Coluna {0} alterada: {1}->{2}
 ComponentToRepositoryProperty.error=Erro
-ComponentToRepositoryProperty.ImpossibleUseOCI=Imposs\u00EDvel usar tipo OCI no reposit\u00F3rio!
+ComponentToRepositoryProperty.ImpossibleUseOCI=Imposs\u00EDvel usar tipo WALLET no reposit\u00F3rio!
 ContextComposite.tableValue=Tabela de Valores
 ContextComposite.treeValue=\u00C1rvore de valores
 ContextSetConfigurationDialog.nameNotValid=O nome n\u00E3o \u00E9 v\u00E1lido
