--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_zh_CN.properties
@@ -122,7 +122,7 @@ AbstractComponentsProvider.folderNotExist=\u6587\u4EF6\u5939 {0} \u4E0D\u5B58\u5
 AbstractItemMigrationTask.taskFailed=\u8FC1\u79FB\u4EFB\u52A1 {0} \u5728\u8FC1\u79FB\u9879\u76EE {1} \u65F6\u5931\u8D25
 ColumnNameChangedExt.columnChanged=\u8282\u70B9\uFF1A{0} \u5217\u5DF2\u66F4\u6539\uFF1A{1}-> {2}
 ComponentToRepositoryProperty.error=\u9519\u8BEF
-ComponentToRepositoryProperty.ImpossibleUseOCI=\u4E0D\u80FD\u5728\u5B58\u50A8\u5E93\u4E2D\u4F7F\u7528 OCI \u7C7B\u578B\uFF01
+ComponentToRepositoryProperty.ImpossibleUseOCI=\u4E0D\u80FD\u5728\u5B58\u50A8\u5E93\u4E2D\u4F7F\u7528 WALLET \u7C7B\u578B\uFF01
 ContextComposite.tableValue=\u8868\u683C\u5F0F\u503C
 ContextComposite.treeValue=\u6811\u683C\u5F0F\u503C
 ContextComposite.variable=\u53D8\u91CF
