--- a/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_ja.properties
+++ b/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_ja.properties
@@ -27,7 +27,7 @@ ComponentsFormatPreferencePage.formatLable=\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8\
 ComponentsFormatPreferencePage.remove=\u524A\u9664
 ComponentsFormatPreferencePage.ErrorTitle=\u30A8\u30E9\u30FC
 ComponentToRepositoryProperty.error=\u30A8\u30E9\u30FC
-ComponentToRepositoryProperty.ImpossibleUseOCI=\u30EA\u30DD\u30B8\u30C8\u30EA\u3067OCI\u30BF\u30A4\u30D7\u306F\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
+ComponentToRepositoryProperty.ImpossibleUseOCI=\u30EA\u30DD\u30B8\u30C8\u30EA\u3067WALLET\u30BF\u30A4\u30D7\u306F\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
 ContextComposite.tableValue=\u30C6\u30FC\u30D6\u30EB\u306E\u5024
 ContextComposite.treeValue=\u30C4\u30EA\u30FC\u306E\u5024
 ContextComposite.variable=\u5909\u6570
