--- a/i18n/plugins/org.talend.metadata.managment.nl/src/main/java/metadata/managment/i18n/messages_fr.properties
+++ b/i18n/plugins/org.talend.metadata.managment.nl/src/main/java/metadata/managment/i18n/messages_fr.properties
@@ -28,7 +28,7 @@ ComponentsFormatPreferencePage.formatLable=Format du libell\u00E9 par d\u00E9fau
 ComponentsFormatPreferencePage.remove=Remove
 ComponentsFormatPreferencePage.ErrorTitle=ERROR
 ComponentToRepositoryProperty.error=ERROR
-ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible d'utiliser le type OCI dans le r\u00E9f\u00E9rentiel.
+ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible d'utiliser le type WALLET dans le r\u00E9f\u00E9rentiel.
 ContextComposite.tableValue=Table des valeurs
 ContextComposite.treeValue=Arbre des valeurs
 ContextComposite.variable=Variables
