--- a/i18n/plugins/org.talend.metadata.managment.nl/src/main/java/metadata/managment/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.metadata.managment.nl/src/main/java/metadata/managment/i18n/messages_zh_CN.properties
@@ -28,7 +28,7 @@ ComponentsFormatPreferencePage.formatLable=\u683C\u5F0F\u6807\u7B7E\u9ED8\u8BA4\
 ComponentsFormatPreferencePage.remove=\u79FB\u9664
 ComponentsFormatPreferencePage.ErrorTitle=\u9519\u8BEF
 ComponentToRepositoryProperty.error=\u9519\u8BEF
-ComponentToRepositoryProperty.ImpossibleUseOCI=\u4E0D\u80FD\u5728\u5B58\u50A8\u5E93\u4E2D\u4F7F\u7528 OCI \u7C7B\u578B\uFF01
+ComponentToRepositoryProperty.ImpossibleUseOCI=\u4E0D\u80FD\u5728\u5B58\u50A8\u5E93\u4E2D\u4F7F\u7528 WALLET \u7C7B\u578B\uFF01
 ContextComposite.tableValue=\u8868\u683C\u5F0F\u503C
 ContextComposite.treeValue=\u6811\u683C\u5F0F\u503C
 ContextComposite.variable=\u53D8\u91CF
