--- a/main/plugins/org.talend.core/src/main/java/messages.properties
+++ b/main/plugins/org.talend.core/src/main/java/messages.properties
@@ -4,7 +4,7 @@ AbstractComponentsProvider.folderNotExist=Folder {0} does not exist.
 AbstractItemMigrationTask.taskFailed=Migration task {0} failed on item {1}
 ColumnNameChangedExt.columnChanged=Node: {0}   Column changed : {1}-> {2}
 ComponentToRepositoryProperty.error=Error
-ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible to use OCI type in the repository\!
+ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible to use WALLET type in the repository\!
 ContextComposite.tableValue=Values as table
 ContextComposite.treeValue=Values as tree
 ContextComposite.variable=Variables
