--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_el.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_el.properties
@@ -107,7 +107,7 @@ AbstractComponentsProvider.folderNotExist=\u039F \u03A6\u03AC\u03BA\u03B5\u03BB\
 AbstractItemMigrationTask.taskFailed=\u0395\u03C1\u03B3\u03B1\u03C3\u03AF\u03B1 \u03BC\u03B5\u03C4\u03AC\u03B2\u03B1\u03C3\u03B7\u03C2 {0} \u03B1\u03C0\u03AD\u03C4\u03C5\u03C7\u03B5 \u03C3\u03C4\u03BF \u03B1\u03BD\u03C4\u03B9\u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF {1}
 ColumnNameChangedExt.columnChanged=\u039A\u03CC\u03BC\u03B2\u03BF\u03C2: {0} \u0397 \u03C3\u03C4\u03AE\u03BB\u03B7 \u03AC\u03BB\u03BB\u03B1\u03BE\u03B5: {1}-> {2}
 ComponentToRepositoryProperty.error=\u03A3\u03C6\u03AC\u03BB\u03BC\u03B1
-ComponentToRepositoryProperty.ImpossibleUseOCI=\u0391\u03B4\u03CD\u03BD\u03B1\u03C4\u03BF\u03BD \u03BD\u03B1 \u03C7\u03C1\u03B7\u03C3\u03B9\u03BC\u03BF\u03C0\u03BF\u03B9\u03B7\u03B8\u03B5\u03AF \u03BF \u03C4\u03CD\u03C0\u03BF\u03C2 OCI \u03C3\u03C4\u03BF \u03C7\u03CE\u03C1\u03BF \u03B1\u03C0\u03CC\u03B8\u03B5\u03C3\u03B7\u03C2!
+ComponentToRepositoryProperty.ImpossibleUseOCI=\u0391\u03B4\u03CD\u03BD\u03B1\u03C4\u03BF\u03BD \u03BD\u03B1 \u03C7\u03C1\u03B7\u03C3\u03B9\u03BC\u03BF\u03C0\u03BF\u03B9\u03B7\u03B8\u03B5\u03AF \u03BF \u03C4\u03CD\u03C0\u03BF\u03C2 WALLET \u03C3\u03C4\u03BF \u03C7\u03CE\u03C1\u03BF \u03B1\u03C0\u03CC\u03B8\u03B5\u03C3\u03B7\u03C2!
 ContextComposite.tableValue=\u03A4\u03B9\u03BC\u03AD\u03C2 \u03C9\u03C2 \u03C0\u03AF\u03BD\u03B1\u03BA\u03B1\u03C2
 ContextComposite.treeValue=\u03A4\u03B9\u03BC\u03AD\u03C2 \u03C9\u03C2 \u03B4\u03AD\u03BD\u03C4\u03C1\u03BF
 ContextComposite.variable=\u039C\u03B5\u03C4\u03B1\u03B2\u03BB\u03B7\u03C4\u03AD\u03C2
