--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_fr.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_fr.properties
@@ -122,7 +122,7 @@ AbstractComponentsProvider.folderNotExist=Le dossier {0} n'existe pas.
 AbstractItemMigrationTask.taskFailed=T\u00E2che de migration {0} \u00E9chou\u00E9e \u00E0 l'\u00E9l\u00E9ment {1}
 ColumnNameChangedExt.columnChanged=N\u0153ud : {0} Colonne modifi\u00E9e : {1}-> {2}
 ComponentToRepositoryProperty.error=ERROR
-ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible d'utiliser le type OCI dans le R\u00E9pertoire !
+ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible d'utiliser le type WALLET dans le R\u00E9pertoire !
 ContextComposite.tableValue=Valeurs en table
 ContextComposite.treeValue=Valeurs en arbre
 ContextComposite.variable=Variables
