--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_jp.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_jp.properties
@@ -246,7 +246,7 @@ ComponentsFormatPreferencePage.formatConnection=\u30D5\u30A9\u30FC\u30DE\u30C3\u
 ComponentsFormatPreferencePage.formatHint=\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8\u30D2\u30F3\u30C8\u30C7\u30D5\u30A9\u30EB\u30C8\uFF1A
 ComponentsFormatPreferencePage.formatLable=\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8\u30E9\u30D9\u30EB\u30C7\u30D5\u30A9\u30EB\u30C8:
 ComponentToRepositoryProperty.error=\u30A8\u30E9\u30FC
-ComponentToRepositoryProperty.ImpossibleUseOCI=\u30EC\u30DD\u30B8\u30C8\u30EA\u306EOCI\u30BF\u30A4\u30D7\u304C\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
+ComponentToRepositoryProperty.ImpossibleUseOCI=\u30EC\u30DD\u30B8\u30C8\u30EA\u306EWALLET\u30BF\u30A4\u30D7\u304C\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
 ContextComposite.tableValue=\u30C6\u30FC\u30D6\u30EB\u3068\u3057\u3066\u306E\u5024
 ContextComposite.treeValue=tree\u3068\u3057\u3066\u306E\u5024
 ContextSetConfigurationDialog.nameNotValid=\u540D\u79F0\u304C\u6B63\u3057\u304F\u3042\u308A\u307E\u305B\u3093
