--- a/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_en.properties
+++ b/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_en.properties
@@ -27,7 +27,7 @@ ComponentsFormatPreferencePage.formatLable=Format label default:
 ComponentsFormatPreferencePage.remove=Remove
 ComponentsFormatPreferencePage.ErrorTitle=Error
 ComponentToRepositoryProperty.error=Error
-ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible to use OCI type in the repository\!
+ComponentToRepositoryProperty.ImpossibleUseOCI=Impossible to use WALLET type in the repository\!
 ContextComposite.tableValue=Values as table
 ContextComposite.treeValue=Values as tree
 ContextComposite.variable=Variables
