fix(TUP-23371)Studio_will_dead_when_TAC_accidentally_disconnected (#2568)
* fix(TUP-23371)Studio_will_dead_when_TAC_accidentally_disconnected

* fix(TUP-23371): Studio_will_dead_when_TAC_accidentally_disconnected
https://jira.talendforge.org/browse/TUP-23371

* fix(TUP-23371)Studio will dead when TAC accidentally disconnected
https://jira.talendforge.org/browse/TUP-23371

* fix(TUP-23371)Studio will dead when TAC accidentally disconnected
https://jira.talendforge.org/browse/TUP-23371

* fix(TUP-23371)[GIT] Studio will dead when TAC accidentally disconnected
https://jira.talendforge.org/browse/TUP-23371

* fix(TUP-23371)[GIT] Studio will dead when TAC accidentally disconnected
https://jira.talendforge.org/browse/TUP-23371

* fix(TUP-23371)Studio will dead when TAC accidentally disconnected

--- a/main/plugins/org.talend.repository.view/src/messages.properties
+++ b/main/plugins/org.talend.repository.view/src/messages.properties
@@ -23,3 +23,5 @@ RepoDoubleClickAction.wait4run=[{0}]: Studio is busy with [{1}], please wait...
 RepoDoubleClickAction.unknown=unknown work
 progress.interrupted=Work is interrupted
 progress.cancelled=Work is cancelled
+RepoDoubleClickAction.Warning=Failed to Execute {0}
+RepoDoubleClickAction.Warning.msg=Studio is busy with background jobs, please try again later.\n\n(you can find all background jobs from the Process view)
