--- a/main/plugins/org.talend.commons.ui/src/main/java/messages.properties
+++ b/main/plugins/org.talend.commons.ui/src/main/java/messages.properties
@@ -136,3 +136,4 @@ ArchiveDirectoryChooser.DataTransfer_browse=B&rowse...
 ArchiveDirectoryChooser.WizardProjectsImportPage_ArchiveSelectTitle=Select &archive file:
 ArchiveDirectoryChooser.FileExport_selectDestinationMessage=Select a directory to export to.
 ArchiveDirectoryChooser.ArchiveExport_description=Export resources to an archive file on the local file system.
+DisplayUtils.NotSupportedExceptionOnLinux=Linux/Unit doesn't support multiple display.
