fix(TUP-22200)Import XML tree from xsd file throw (#2565)
* fix(TUP-22200)Import XML tree from xsd file throw
indexOutOfBoundsException
https://jira.talendforge.org/browse/TUP-22200

* fix(TUP-22200)Import XML tree from xsd file throw
indexOutOfBoundsException
https://jira.talendforge.org/browse/TUP-22200

* fix(TUP-22200)Import XML tree from xsd file throw
indexOutOfBoundsException
https://jira.talendforge.org/browse/TUP-22200

* fix(TUP-22200)Import XML tree from xsd file throw
indexOutOfBoundsException
https://jira.talendforge.org/browse/TUP-22200

--- a/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
+++ b/main/plugins/org.talend.repository.metadata/src/main/java/org/talend/repository/metadata/i18n/messages.properties
@@ -1409,6 +1409,7 @@ XmlFileStep1.sourceSchema=Source Schema
 XmlFileStep1Form.limitation=Limit
 XmlFileStep1Form.limitToolTip=Limit the hierarchy depth to {0} levels.
 XmlFileStep1Form.notFound="{0}" is not found or the xml format is incorrect.
+XmlFileStep1Form.ImportSchemaNotExistError=Required reference schema files are missing. 
 XmlFileStep2Form.previewNotAvailable=No preview available for XSD file
 XmlFileWizard.windowTitleCreate=New Xml File
 XmlFileWizard.windowTitleUpdate=Edit an existing Xml File
@@ -1458,3 +1459,6 @@ DatabaseForm.maprdb.tableInfo.tableNSMapping.label=Table Namespace mappings
 DatabaseForm.set_table_ns_mapping.checkBtn=Set table Namespace mappings
 BrowerDialog.empryUrl=the url can not be empty
 DatabaseForm.canNotUsableInDataProfiler=some database types are not usable in the Data Profiler perspective.
+
+ImportTreeFromXMLAction.ImportSchemaNotExistError=Required reference schema files are missing. 
+ImportTreeFromXMLAction.schemaFileNotExistDetailTitle=The following files do not exist:
