feat(TUP-23774):Update studio with update-site mechanism.

--- a/main/plugins/org.talend.updates.runtime/src/main/java/messages.properties
+++ b/main/plugins/org.talend.updates.runtime/src/main/java/messages.properties
@@ -182,4 +182,12 @@ FeaturesManager.Type.p2.studioPatch=Studio Patch
 FeaturesManager.Type.plainZip=Plain ZIP
 FeaturesManager.Category.all=All Categories
 
+P2UpdateManager.update.product=Updating talend product...
+P2UpdateManager.p2.uri.null=P2 repository URI is null.
+P2UpdateManager.p2.feature.null=Feature list is empty.
+P2UpdateManager.no.iu.available=Could not find any available IU in current profile.
+P2UpdateManager.user.cancel=User canceled the upgrade of product.
+P2UpdateManager.update.error=error updating product : {0}
+P2UpdateManager.update.sucess=Update talend product successfully.
+
 UIUtils.exception.interrupt=User cancelled.
