fix(TUP-23905): Job disappearing after merging git branches https://jira.talendforge.org/browse/TUP-23905

--- a/main/plugins/org.talend.repository.items.importexport/src/main/java/org/talend/repository/items/importexport/messages.properties
+++ b/main/plugins/org.talend.repository.items.importexport/src/main/java/org/talend/repository/items/importexport/messages.properties
@@ -11,9 +11,16 @@ ImportExportHandlersManager_populatingItemsMessage=Populate items to import
 ImportExportHandlersManager_importingItemsMessage=Importing items...
 ImportExportHandlersManager_deletingItemsMessage=Delete items...
 ImportExportHandlersManager_importingItemsError=Import errors
+ImportExportHandlersManager_progressReloadingJoblets=reloading joblets...
+ImportExportHandlersManager_progressApplyMigrationTasks=Apply migration tasks for {0} ...
+ImportExportHandlersManager_progressDoFinalCheck=Do final check for imported: {0} ...
+ImportExportHandlersManager_progressSavingProjectConfigurations=Saving project configurations...
 
 ImportBasicHandler_ErrorCreateEmfResource=Load EMF Resource failed.
 ImportBasicHandler_MissingItemFile=missing item file.
 ImportBasicHandler_NotHrefCurrentItemFile=original item file has some errors, it has been recovered from file name, please recheck. 
 ImportBasicHandler_MissingItemError={0};Missing '{1}' file!;{2}
 ImportBasicHandler_LoadEMFResourceError={0};Load EMF Resource failed;{1}
+
+IProgressMonitor_UserCancelled=User cancelled.
+ChangeIdManager_ApplyingNewIds=Applying new ids into {0} ...
