fix(TUP-23905): Job disappearing after merging git branches https://jira.talendforge.org/browse/TUP-23905

--- a/main/plugins/org.talend.repository.items.importexport.ui/src/main/java/org/talend/repository/items/importexport/ui/messages.properties
+++ b/main/plugins/org.talend.repository.items.importexport.ui/src/main/java/org/talend/repository/items/importexport/ui/messages.properties
@@ -28,7 +28,7 @@ ImportItemsWizardPage_internalIdGroup=Internal id
 ImportItemsWizardPage_internalIdGroup_alwaysRegenId=Always regenerate id when import
 ImportItemsWizardPage_internalIdGroup_keepOrigId=Keep original internal id
 ImportItemsWizardPage_cancelPressed_title=Confirm
-ImportItemsWizardPage_cancelPressed_desc=Studio is still doing the import related actions, if you cancel now, some imported items may don't work correctly.\nPlease confirm. 
+ImportItemsWizardPage_cancelPressed_desc=Studio is still doing the import related actions, if you cancel now, some imported items may don't work correctly.\nAre you sure to cancel now? 
 
 ImportItemsAction_title=Import items
 
