--- a/main/plugins/org.talend.repository.items.importexport/src/main/java/org/talend/repository/items/importexport/messages.properties
+++ b/main/plugins/org.talend.repository.items.importexport/src/main/java/org/talend/repository/items/importexport/messages.properties
@@ -15,6 +15,7 @@ ImportExportHandlersManager_progressReloadingJoblets=reloading joblets...
 ImportExportHandlersManager_progressApplyMigrationTasks=Apply migration tasks for {0} ...
 ImportExportHandlersManager_progressDoFinalCheck=Do final check for imported: {0} ...
 ImportExportHandlersManager_progressSavingProjectConfigurations=Saving project configurations...
+ImportExportHandlersManager_progressFireImportChanges=Notifying project of changes related to imported items...
 
 ImportBasicHandler_ErrorCreateEmfResource=Load EMF Resource failed.
 ImportBasicHandler_MissingItemFile=missing item file.
