feat(TUP-24382)Enable HTTPS with authentication (#2859)
* feat(TUP-24382)Enable HTTPS with authentication

* feat(TUP-24382)Enable HTTPS with authentication

--- a/main/plugins/org.talend.core.ui/src/main/java/messages.properties
+++ b/main/plugins/org.talend.core.ui/src/main/java/messages.properties
@@ -620,3 +620,5 @@ I18nPreferencePage.restart=Restart
 I18nPreferencePage.restartButton=Need to restart to take effect.
 I18nPreferencePage.restoreDefault=Restore default
 I18nPreferencePage.wait_process=Process will hold on several minutes, please wait...
+MetadataPreferencePage.EnableBasic.name=Enable Basic Authentication Header
+MetadataPreferencePage.MessageDialog.Restart=Will restart the studio to apply this setting. \nAre you sure?
