feat(TUP-25120)Merge nexus proxy setup (#2895)
* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

* feat(TUP-25120)Merge nexus proxy setup

--- a/main/plugins/org.talend.librariesmanager/src/main/java/messages.properties
+++ b/main/plugins/org.talend.librariesmanager/src/main/java/messages.properties
@@ -28,3 +28,5 @@ ShareLibsJob.message=Share libraries from maven to {0} server
 ShareLibsJob.sharingLibraries=Sharing libraries : {0}
 
 ExtensionModuleManager.moduleGroup.cycleReference=Module group {0} was cycle referenced!
+NexusRepository.checkConnection.successMsg=Connection successful. 
+NexusRepository.checkConnection.invalidParam=Invalid Nexus Parameter. 
