bugfix(TUP-25686):"Parent Version" is always Latest for testcase (#3043)
bugfix(TUP-25686):"Parent Version" is always Latest for testcase

--- a/main/plugins/org.talend.metadata.managment.ui/src/main/java/messages.properties
+++ b/main/plugins/org.talend.metadata.managment.ui/src/main/java/messages.properties
@@ -499,7 +499,7 @@ OpenXSDFileDialog.xmlSelectedOrNot=As you have selected a XSD metadata file, \n 
 PropertiesWizard.EditPropertiesPageTitle=Edit properties
 PropertiesWizard.alreadyLockedByUser=The properties are read only because this item is already locked by an editor.
 PropertiesWizard.VersionTitle=Change the parent version
-PropertiesWizard.PreviousVersion=The TestCases of {0} will point to the previous version,Please use "Edit TestCase Properties" to change the parent version.
+PropertiesWizard.PreviousVersion=The TestCases of {0} will point to the previous version, please use "Edit TestCase Properties" to change the parent version.
 ConfirmReloadConnectionDialog.title=Confirm Reload Connection
 ConfirmReloadConnectionDialog.desc=Connection properties changed, the analyzed elements of this connection \non which the analysis depend might be removed if reload it, \ndo you want continue?
 ConfirmReloadConnectionDialog.reload=reload
