--- a/i18n/plugins/org.talend.commons.ui.nl/src/main/java/messages_en.properties
+++ b/i18n/plugins/org.talend.commons.ui.nl/src/main/java/messages_en.properties
@@ -54,9 +54,9 @@ ColorStyledText.SelectAllItem.Text=Select All
 DialogErrorForCellEditorListener.Error.MsgDialogTitle=Error
 ExportPushButton.ExportButton.Tip=Export all rows into XML file
 TableViewerCreator.CellModifier.ExError=The current CellModifier does'nt support this operation. \n Use '{0}' or a class which extends it to use this feature
-Curve2D.MinNum.Be0=minimumSegements must positive or 0
+Curve2D.MinNum.Be0=minimumSegments be must positive or 0
 ModeReader.IgnoreElement=Ignore unknown element 
-Curve2D.MaxNum.Be0=maximumSegements must be positive or 0
+Curve2D.MaxNum.Be0=maximumSegments must be positive or 0
 CellEditorDialogBehavior.textContent=...
 CellEditorValueAdapterFactory.valueNotStringType=Bean value should be a class of String type \!
 ColorStyledText.RedoItem.Text=Redo
@@ -134,3 +134,4 @@ ArchiveDirectoryChooser.DataTransfer_browse=B&rowse...
 ArchiveDirectoryChooser.WizardProjectsImportPage_ArchiveSelectTitle=Select &archive file:
 ArchiveDirectoryChooser.FileExport_selectDestinationMessage=Select a directory to export to.
 ArchiveDirectoryChooser.ArchiveExport_description=Export resources to an archive file on the local file system.
+DisplayUtils.NotSupportedExceptionOnLinux=Linux/Unit doesn't support multiple display.
