--- a/i18n/plugins/org.talend.core.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.core.nl/src/main/java/messages_ja.properties
@@ -34,7 +34,7 @@ EConnectionType.onSubjobOkMenu=\u30B5\u30D6\u30B8\u30E7\u30D6\u304COK\u306E\u583
 CorePreferencePage.groupBySource=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u3092\"\u30BD\u30FC\u30B9\u3067\u30B0\u30EB\u30FC\u30D7\u5316\"
 EConnectionType.onSubjobErrorMenu=\u30B5\u30D6\u30B8\u30E7\u30D6\u304C\u30A8\u30E9\u30FC\u306E\u5834\u5408
 RepositoryUpdateManager.ItemsToUpdate=\u66F4\u65B0\u3059\u308B\u9805\u76EE\u3092\u30C1\u30A7\u30C3\u30AF
-SelectRepositoryContextDialog.Label=\u30EA\u30DD\u30B8\u30C8\u30EA\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u304B\u3089\u5909\u6570\u3092\u9078\u629E
+SelectRepositoryContextDialog.Label=\u30EA\u30DD\u30B8\u30C8\u30EA\u30FC\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u304B\u3089\u5909\u6570\u3092\u9078\u629E
 EMetadataEncoding.Greek=\u30AE\u30EA\u30B7\u30E3\u8A9E
 EMetadataEncoding.UTF16BE=Unicode BigEndian (16\u30D3\u30C3\u30C8)
 EConnectionType.synchronize=\u540C\u671F
