--- a/i18n/plugins/org.talend.core.repository.nl/src/main/java/org/talend/core/repository/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.repository.nl/src/main/java/org/talend/core/repository/i18n/messages_zh_CN.properties
@@ -206,3 +206,4 @@ ProxyRepositoryFactory.msgMissingReferencedProjects=\u7F3A\u5C11\u5F15\u7528\u76
 ProxyRepositoryFactory.exceptionMissingReferencedProjects=\u7F3A\u5C11\u5F15\u7528\u7684\u5DE5\u7A0B [{0}]\u3002
 ProxyRepositoryFactory.btnLabelContinue=\u7EE7\u7EED
 ProxyRepositoryFactory.load.sdk.componnents=\u52A0\u8F7D SDK \u7EC4\u4EF6...
+SyncLibrariesLoginTask.createStatsLogAndImplicitParamter=\u521B\u5EFA\u7EDF\u8BA1\u65E5\u5FD7\u548C\u9690\u5F0F\u53C2\u6570
