--- a/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_en.properties
+++ b/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_en.properties
@@ -633,3 +633,5 @@ ReferenceProjectProblemManager.ErrorMoreThanOneBranchUsing={0} more than one bra
 EComponentCategory_advanceSetting=Advanced settings
 RepositoryUpdateManager.job.title=Updating items...
 BigDataBasicUtil.loadDynamicDistribution.IDynamicDistributionManager.notFound=Instance of {0} not found
+ComponentToRepositoryProperty.ImpossibleUseWALLET=Impossible to use WALLET type in the repository\!
+TalendLibsServerManager.connectUserLibraryFailureMessage=The user libraries artifact repository set in administrator cannot connect: Connection to {0} refused
