--- a/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_ja.properties
+++ b/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_ja.properties
@@ -563,7 +563,7 @@ repository.systemIndicators.patternMatching=\u30D1\u30BF\u30FC\u30F3\u4E00\u81F4
 repository.systemIndicators.rowComparison=\u884C\u6BD4\u8F03
 repository.systemIndicators.simpleStatistics=\u5358\u7D14\u7D71\u8A08
 repository.systemIndicators.soundex=Soundex
-repository.systemIndicators.summaryStatistics=\u6C47\u603B\u7EDF\u8BA1
+repository.systemIndicators.summaryStatistics=\u96C6\u8A08\u7D71\u8A08
 repository.systemIndicators.textStatistics=\u30C6\u30AD\u30B9\u30C8\u7D71\u8A08
 repository.tdqExchange=Exchange
 repository.systemIndicators.phoneNumberStatistics=\u96FB\u8A71\u756A\u53F7\u7D71\u8A08
@@ -633,3 +633,5 @@ ReferenceProjectProblemManager.ErrorMoreThanOneBranchUsing=\u30D7\u30ED\u30B8\u3
 EComponentCategory_advanceSetting=\u8A73\u7D30\u8A2D\u5B9A
 RepositoryUpdateManager.job.title=\u30A2\u30A4\u30C6\u30E0\u306E\u66F4\u65B0\u4E2D...
 BigDataBasicUtil.loadDynamicDistribution.IDynamicDistributionManager.notFound={0}\u306E\u30A4\u30F3\u30B9\u30BF\u30F3\u30B9\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093
+ComponentToRepositoryProperty.ImpossibleUseWALLET=\u30EA\u30DD\u30B8\u30C8\u30EA\u30FC\u3067WALLET\u30BF\u30A4\u30D7\u3092\u4F7F\u7528\u3059\u308B\u3053\u3068\u306F\u3067\u304D\u307E\u305B\u3093\uFF01
+TalendLibsServerManager.connectUserLibraryFailureMessage=\u7BA1\u7406\u8005\u306E\u30E6\u30FC\u30B6\u30FC\u30E9\u30A4\u30D6\u30E9\u30EA\u30FC\u306E\u30A2\u30FC\u30C6\u30A3\u30D5\u30A1\u30AF\u30C8\u30EA\u30DD\u30B8\u30C8\u30EA\u30FC\u30BB\u30C3\u30C8\u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093: {0}\u3078\u306E\u63A5\u7D9A\u306F\u62D2\u5426\u3055\u308C\u307E\u3057\u305F
