--- a/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.core.runtime.nl/src/main/java/org/talend/core/runtime/i18n/messages_zh_CN.properties
@@ -633,3 +633,5 @@ ReferenceProjectProblemManager.ErrorMoreThanOneBranchUsing={0} \u5DE5\u7A0B\u5F1
 EComponentCategory_advanceSetting=\u9AD8\u7EA7\u8BBE\u7F6E
 RepositoryUpdateManager.job.title=\u6B63\u5728\u66F4\u65B0\u9879\u76EE...
 BigDataBasicUtil.loadDynamicDistribution.IDynamicDistributionManager.notFound=\u672A\u627E\u5230 {0} \u7684\u5B9E\u4F8B
+ComponentToRepositoryProperty.ImpossibleUseWALLET=\u4E0D\u80FD\u5728\u5B58\u50A8\u5E93\u4E2D\u4F7F\u7528 WALLET \u7C7B\u578B\uFF01
+TalendLibsServerManager.connectUserLibraryFailureMessage=\u65E0\u6CD5\u8FDE\u63A5 Administrator \u4E2D\u7684\u7528\u6237\u5E93\u6784\u4EF6\u5E93\u96C6\uFF1A\u5230 {0} \u7684\u8FDE\u63A5\u88AB\u62D2
