--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_en.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_en.properties
@@ -581,4 +581,6 @@ I18nPreferencePage.importBabili=Import Translation from Babili
 I18nPreferencePage.restart=Restart
 I18nPreferencePage.restartButton=Need to restart to take effect.
 I18nPreferencePage.restoreDefault=Restore default
-I18nPreferencePage.wait_process=Process will hold on several minutes, please wait...
+I18nPreferencePage.wait_process=The process will hold for several minutes, please wait...
+MetadataPreferencePage.EnableBasic.name=Enable Basic Authentication Header
+MetadataPreferencePage.MessageDialog.Restart=The Studio needs to restart for this setting to take effect.\nAre you sure?
