--- a/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_fr.properties
+++ b/i18n/plugins/org.talend.core.ui.nl/src/main/java/messages_fr.properties
@@ -84,6 +84,7 @@ EComponentCategory.advancedSettings=Param\u00E8tres avanc\u00E9s
 EComponentCategory.basicRun=Ex\u00E9cution simple
 EComponentCategory.breakpoint=Point d'arr\u00EAt
 EComponentCategory.debugRun=Ex\u00E9cution Debug
+EComponentCategory.targetExec=Ex\u00E9c distante
 EConnectionType.iteratorMenu=Iterate
 EConnectionType.lookupMenu=Look Up
 EConnectionType.mainMenu=Main
@@ -529,8 +530,11 @@ WorkspaceMnu.restart.error.message=Impossible de relancer la plateforme car la p
 WorkspaceDlg.title=Choisir le r\u00E9pertoire Workspace
 WorkspaceDlg.Message=Le Studio Talend stocke vos donn\u00E9es dans un dossier nomm\u00E9 Workspace\nS\u00E9lectionnez le r\u00E9pertoire Workspace
 WorkspaceDlg.workspace.label=Workspace
+WorkspaceDlg.browse.button=Parcourir...
 WorkspaceDlg.browse.folder.title=S\u00E9lectionnez un r\u00E9pertoire Workspace
 WorkspaceDlg.use.this.as.default.cb.message=&Utiliser ce r\u00E9pertoire Workspace par d\u00E9faut et ne plus demander
 CorePreferencePage.alwaysWelcome.v2=Toujours afficher la vue Bienvenue lors du d\u00E9marrage
 CorePreferencePage.alwaysAskAtStartup=Toujours afficher la fen\u00EAtre des projets lors du d\u00E9marrage
 EComponentCategory_advanceSetting=Param\u00E8tres avanc\u00E9s
+I18nPreferencePage.needRestart=Langage local (red\u00E9marrage requis)
+I18nPreferencePage.restart=Red\u00E9marrer
