--- a/i18n/plugins/org.talend.librariesmanager.ui.nl/src/main/java/messages_en.properties
+++ b/i18n/plugins/org.talend.librariesmanager.ui.nl/src/main/java/messages_en.properties
@@ -117,3 +117,4 @@ ExportCustomSettingsAction.title=Export custom settings
 ConfigModuleDialog.install.message=Install a module : {0}
 download.external.dialog.warning=Warning
 download.external.dialog.message=Select at least one module not installed.
+DownloadModuleRunnable.jar.download.failed=The Download failed for the following jars {0}
