--- a/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_en.properties
+++ b/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_en.properties
@@ -544,3 +544,5 @@ SparkPropertiesDialog.desc=Spark properties configurations
 SparkPropertiesDialog.parentProperties.title=Parent Spark Properties
 DatabaseForm.DataBase=DataBase
 FileStep2.stop=Stop
+PropertiesWizard.VersionTitle=Change the parent version
+PropertiesWizard.PreviousVersion=The TestCases of {0} will point to the previous version. Please use "Edit TestCase Properties" to change the parent version.
