--- a/i18n/plugins/org.talend.repository.items.importexport.nl/src/main/java/org/talend/repository/items/importexport/messages_en.properties
+++ b/i18n/plugins/org.talend.repository.items.importexport.nl/src/main/java/org/talend/repository/items/importexport/messages_en.properties
@@ -15,3 +15,4 @@ ImportBasicHandler_NotHrefCurrentItemFile=original item file has some errors, it
 ImportBasicHandler_MissingItemError={0};Missing '{1}' file!;{2}
 ImportBasicHandler_LoadEMFResourceError={0};Load EMF Resource failed;{1}
 AbstractImportHandler_nameUsed.differentRepositoryType=An item with the same name already exists. Check the Recycle bin and empty it if needed.
+ImportExportHandlersManager_overrideDelete=Deleting existing items to override...
