--- a/i18n/plugins/org.talend.repository.items.importexport.ui.nl/src/main/java/org/talend/repository/items/importexport/ui/messages_en.properties
+++ b/i18n/plugins/org.talend.repository.items.importexport.ui.nl/src/main/java/org/talend/repository/items/importexport/ui/messages_en.properties
@@ -31,3 +31,6 @@ ShowErrorsDuringImportItemsDialog_confirmOverwrite_message=File " {0}" exists.  
 ImportItemsWizardPage_ErrorsMessage=The item '{0}' with different version {1} exists. Check the Recycle bin and empty it if needed.
 ImportItemsWizardPage_ProgressDialog_ExecutingMessage=Preparing...
 ImportItemsWizardPage_ProgressDialog_WaitingFinishMessage=Can not interrupt the Preparing action normally,\n
+ImportItemsWizardPage_internalIdGroup=Internal id
+ImportItemsWizardPage_internalIdGroup_alwaysRegenId=Always regenerate ID at import
+ImportItemsWizardPage_internalIdGroup_keepOrigId=Keep original internal id
