--- a/i18n/plugins/org.talend.repository.items.importexport.ui.nl/src/main/java/org/talend/repository/items/importexport/ui/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.items.importexport.ui.nl/src/main/java/org/talend/repository/items/importexport/ui/messages_zh_CN.properties
@@ -31,3 +31,6 @@ ShowErrorsDuringImportItemsDialog_confirmOverwrite_message=\u6587\u4EF6\u201C{0}
 ImportItemsWizardPage_ErrorsMessage=\u5B58\u5728\u5177\u6709\u4E0D\u540C\u7248\u672C {1} \u7684\u9879\u76EE {0}\u3002\u68C0\u67E5\u56DE\u6536\u7AD9\u5E76\u6839\u636E\u9700\u8981\u5C06\u5176\u6E05\u7A7A\u3002
 ImportItemsWizardPage_ProgressDialog_ExecutingMessage=\u6B63\u5728\u51C6\u5907...
 ImportItemsWizardPage_ProgressDialog_WaitingFinishMessage=\u65E0\u6CD5\u6B63\u5E38\u4E2D\u65AD\u6B63\u5728\u51C6\u5907\u64CD\u4F5C\uFF0C\\n
+ImportItemsWizardPage_internalIdGroup=\u5185\u90E8 ID
+ImportItemsWizardPage_internalIdGroup_alwaysRegenId=\u5BFC\u5165\u65F6\u59CB\u7EC8\u91CD\u65B0\u751F\u6210 ID
+ImportItemsWizardPage_internalIdGroup_keepOrigId=\u4FDD\u7559\u539F\u59CB\u5185\u90E8 ID
