--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_ja.properties
@@ -374,10 +374,10 @@ ParametersValuesDialog_Name=\u540D\u524D
 ParametersValuesDialog_Value=\u5024
 ParametersValuesDialog_Title=\u30D1\u30E9\u30E1\u30FC\u30BF\u5024\u306E\u4E0A\u66F8\u304D
 ParametersValuesDialog_Desc=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u3059\u308B\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u30D1\u30E9\u30E1\u30FC\u30BF\u5024\u306E\u4E0A\u66F8\u304D
-JobScriptsExportWizardPage.newExportJob0=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 {0}\uFF1A{1}_{2}
-JobScriptsExportWizardPage.newExportJob1=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 {0}\uFF1A{1}_{2}
+JobScriptsExportWizardPage.newExportJob0=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 {0}: {1}_{2}
+JobScriptsExportWizardPage.newExportJob1=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 {0}: {1}_{2}
 JobScriptsExportWizardPage.newExportJobScript={0}\u306E\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u4E2D
-JobScriptsExportWizardPage.newExportJobSucessful=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8 {0}\uFF1A{1}_{2}\u304C\u6210\u529F\u3057\u307E\u3057\u305F!
+JobScriptsExportWizardPage.newExportJobSucessful=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8{0}: {1}_{2}\u304C\u6210\u529F\u3057\u307E\u3057\u305F!
 JobScriptsExportWizardPage.exportResourceError=\u30EA\u30BD\u30FC\u30B9\u306E\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u306E\u30A8\u30E9\u30FC
 JobScriptsExportWizardPage.newExportSuccess={0} \u306E\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u306B\u6210\u529F\u3057\u307E\u3057\u305F\uFF01
 JobScriptsExportWizardPage.extractZipFile=ZIP\u30D5\u30A1\u30A4\u30EB\u306E\u89E3\u51CD
@@ -1250,3 +1250,6 @@ DatabaseForm.hive.metastore.uris=Hive\u30E1\u30BF\u30B9\u30C8\u30A2URI
 XmlFileOutputStep2Form.refresh=[\u30B9\u30AD\u30FC\u30DE\u30EA\u30B9\u30C8]\u30D3\u30E5\u30FC\u30A2\u306E\u66F4\u65B0
 BrowerDialog.empryUrl=url\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044
 DatabaseForm.canNotUsableInDataProfiler=\u4E00\u90E8\u306E\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u30BF\u30A4\u30D7\u306FData Profiler\u30D1\u30FC\u30B9\u30DA\u30AF\u30C6\u30A3\u30D6\u3067\u4F7F\u7528\u3067\u304D\u307E\u305B\u3093\u3002
+XmlFileStep1Form.ImportSchemaNotExistError=\u5FC5\u8981\u306A\u53C2\u7167\u30B9\u30AD\u30FC\u30DE\u30D5\u30A1\u30A4\u30EB\u304C\u3042\u308A\u307E\u305B\u3093\u3002
+ImportTreeFromXMLAction.ImportSchemaNotExistError=\u5FC5\u8981\u306A\u53C2\u7167\u30B9\u30AD\u30FC\u30DE\u30D5\u30A1\u30A4\u30EB\u304C\u3042\u308A\u307E\u305B\u3093\u3002
+ImportTreeFromXMLAction.schemaFileNotExistDetailTitle=\u6B21\u306E\u30D5\u30A1\u30A4\u30EB\u306F\u5B58\u5728\u3057\u307E\u305B\u3093\uFF1A
