--- a/i18n/plugins/org.talend.common.ui.runtime.nl/src/main/java/org/talend/commons/ui/runtime/i18n/messages_en.properties
+++ b/i18n/plugins/org.talend.common.ui.runtime.nl/src/main/java/org/talend/commons/ui/runtime/i18n/messages_en.properties
@@ -16,8 +16,8 @@ ContentProposalAdapterExtended.close=close
 ContentProposalAdapterExtended.closeFocusout=close focusout
 ControlUtils.Unsupported1=This control ({0}) is not supported, add case if you want...
 CopyPushButton.CopyButton.Tip=Copy selected items
-Curve2D.MaxNum.Be0=maximumSegements must positive or 0
-Curve2D.MinNum.Be0=minimumSegements must positive or 0
+Curve2D.MaxNum.Be0=maximumSegments must be positive or 0
+Curve2D.MinNum.Be0=minimumSegments must be positive or 0
 DateDialog.textContent=Select Date & Time
 DefaultCellModifier.tableItemDispose=TableItem disposed
 DialogErrorForCellEditorListener.Error.MsgDialogTitle=Error
