--- a/i18n/plugins/org.talend.commons.ui.nl/src/main/java/messages_ja.properties
+++ b/i18n/plugins/org.talend.commons.ui.nl/src/main/java/messages_ja.properties
@@ -54,9 +54,9 @@ ColorStyledText.SelectAllItem.Text=\u3059\u3079\u3066\u9078\u629E
 DialogErrorForCellEditorListener.Error.MsgDialogTitle=\u30A8\u30E9\u30FC
 ExportPushButton.ExportButton.Tip=\u3059\u3079\u3066\u306E\u884C\u3092XML\u30D5\u30A1\u30A4\u30EB\u306B\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8
 TableViewerCreator.CellModifier.ExError=\u73FE\u5728\u306ECellModifier\u306F\u3053\u306E\u64CD\u4F5C\u3092\u30B5\u30DD\u30FC\u30C8\u3057\u3066\u3044\u307E\u305B\u3093\u3002'{0}'\u3092\u4F7F\u7528\u3059\u308B\u304B\u3001\u62E1\u5F35\u3057\u3066\u3053\u306E\u30D5\u30A3\u30FC\u30C1\u30E3\u30FC\u3092\u4F7F\u7528\u3067\u304D\u308B\u3088\u3046\u306B\u3059\u308B\u30AF\u30E9\u30B9\u3092\u4F7F\u7528\u3057\u307E\u3059
-Curve2D.MinNum.Be0=\u6700\u5C0F\u30BB\u30B0\u30E1\u30F3\u30C8\u306F\u6B63\u306E\u6570\u304B0\u3067\u306A\u3051\u308C\u3070\u3044\u3051\u307E\u305B\u3093
+Curve2D.MinNum.Be0=minimumSegments\u306F\u6B63\u307E\u305F\u306F0\u306B\u3057\u3066\u304F\u3060\u3055\u3044
 ModeReader.IgnoreElement=\u4E0D\u660E\u306A\u8981\u7D20\u3092\u7121\u8996
-Curve2D.MaxNum.Be0=maximumSegements\u306F \u6B63\u306E\u6570\u3082\u3057\u304F\u306F0\u3067\u306A\u304F\u3066\u306F\u306A\u308A\u307E\u305B\u3093
+Curve2D.MaxNum.Be0=maximumSegments\u306F\u6B63\u307E\u305F\u306F0\u306B\u3057\u3066\u304F\u3060\u3055\u3044
 CellEditorDialogBehavior.textContent=...
 CellEditorValueAdapterFactory.valueNotStringType=Bean\u306E\u5024\u306FString\u578B\u306E\u30AF\u30E9\u30B9\u3067\u306A\u304F\u3066\u306F\u306A\u308A\u307E\u305B\u3093\u3002
 ColorStyledText.RedoItem.Text=\u3084\u308A\u76F4\u3059
@@ -134,3 +134,4 @@ ArchiveDirectoryChooser.DataTransfer_browse=\u53C2&\u7167...
 ArchiveDirectoryChooser.WizardProjectsImportPage_ArchiveSelectTitle=&\u30A2\u30FC\u30AB\u30A4\u30D6\u30D5\u30A1\u30A4\u30EB\u306E\u9078\u629E:
 ArchiveDirectoryChooser.FileExport_selectDestinationMessage=\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u5148\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E
 ArchiveDirectoryChooser.ArchiveExport_description=\u30EA\u30BD\u30FC\u30B9\u3092\u30ED\u30FC\u30AB\u30EB\u30D5\u30A1\u30A4\u30EB\u30B7\u30B9\u30C6\u30E0\u4E0A\u306E\u30A2\u30FC\u30AB\u30A4\u30D6\u30D5\u30A1\u30A4\u30EB\u306B\u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u3057\u307E\u3059\u3002
+DisplayUtils.NotSupportedExceptionOnLinux=Linux/Unit\u3067\u306F\u30DE\u30EB\u30C1\u30C7\u30A3\u30B9\u30D7\u30EC\u30A4\u304C\u30B5\u30DD\u30FC\u30C8\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
