--- a/i18n/plugins/org.talend.librariesmanager.nl/src/main/java/messages_en.properties
+++ b/i18n/plugins/org.talend.librariesmanager.nl/src/main/java/messages_en.properties
@@ -23,3 +23,5 @@ modules.required=Required for using this component.
 ShareLibsJob.message=Share libraries from maven to {0} server
 ShareLibsJob.sharingLibraries=Sharing libraries : {0}
 ExtensionModuleManager.moduleGroup.cycleReference=Module group {0} was cycle referenced!
+NexusRepository.checkConnection.successMsg=Connection successful.
+NexusRepository.checkConnection.invalidParam=Invalid Nexus Parameter.
