--- a/i18n/plugins/org.talend.librariesmanager.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.librariesmanager.nl/src/main/java/messages_zh_CN.properties
@@ -23,3 +23,5 @@ modules.required=\u4F7F\u7528\u6B64\u7EC4\u4EF6\u65F6\u9700\u8981\u3002
 ShareLibsJob.message=\u5C06\u5E93\u4ECE maven \u5171\u4EAB\u5230 {0} \u670D\u52A1\u5668
 ShareLibsJob.sharingLibraries=\u6B63\u5728\u5171\u4EAB\u5E93\uFF1A{0}
 ExtensionModuleManager.moduleGroup.cycleReference=\u6A21\u5757\u7EC4 {0} \u662F\u5FAA\u73AF\u5F15\u7528\u7684\uFF01
+NexusRepository.checkConnection.successMsg=\u8FDE\u63A5\u6210\u529F\u3002
+NexusRepository.checkConnection.invalidParam=\u65E0\u6548\u7684 Nexus \u53C2\u6570\u3002
