--- a/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.metadata.managment.ui.nl/src/main/java/messages_zh_CN.properties
@@ -119,7 +119,7 @@ DatabaseTableForm.retreiveButtonAlert=\u8981\u542F\u7528\u201C\u83B7\u53D6 Schem
 DatabaseTableForm.retreiveButtonConfirmation=\u786E\u8BA4\u66F4\u6539
 DatabaseTableForm.retreiveButtonConfirmationMessage=Schema\u8BBE\u7F6E\u5DF2\u66F4\u6539,\u4E0E\u5F53\u524DSchema\u9884\u89C8\u4E0D\u540C. \u66F4\u65B0Schema\u5C06\u8986\u76D6\u6240\u6709\u5F53\u524D\u6570\u636E.\u662F\u5426\u7EE7\u7EED\u66F4\u65B0?
 DatabaseTableForm.retreiveButtonIsAccessible=\"\u83B7\u53D6\" \u6309\u94AE\u73B0\u5728\u53EF\u4EE5\u4F7F\u7528\u3002
-DatabaseTableForm.retreiveButtonTip=\u5FC5\u987B\u5B9A\u4E49Schema. \u4F7F\u7528 \"\u83B7\u53D6 Schema\" \u6309\u94AE\u4EE5\u8282\u7701\u65F6\u95F4\uFF01
+DatabaseTableForm.retreiveButtonTip=\u5FC5\u987B\u5B9A\u4E49 Schema\u3002\u4F7F\u7528\u201C\u83B7\u53D6 Schema\u201D\u6309\u94AE\u4EE5\u8282\u7701\u65F6\u95F4\uFF01
 DatabaseTableForm.retreiveButtonUse=\u4F7F\u7528\u201C\u83B7\u53D6 Schema\u201D\u6309\u94AE\uFF0C\u7528\u57FA\u4E8E\u8868\u7684 Schema \u66FF\u6362\u5F53\u524D Schema
 DatabaseTableForm.retreiveSchema=\u83B7\u53D6 Schema
 DatabaseTableForm.guessSchema=\u63A8\u6D4B Schema
@@ -544,3 +544,5 @@ SparkPropertiesDialog.desc=Spark\u5C5E\u6027\u8BBE\u7F6E
 SparkPropertiesDialog.parentProperties.title=\u7236\u7EA7Spark\u5C5E\u6027
 DatabaseForm.DataBase=DataBase
 FileStep2.stop=\u505C\u6B62
+PropertiesWizard.VersionTitle=\u66F4\u6539\u7236\u7248\u672C
+PropertiesWizard.PreviousVersion={0} \u7684 TestCase \u5C06\u6307\u5411\u4E0A\u4E00\u7248\u672C\uFF0C\u8BF7\u4F7F\u7528 \"\u7F16\u8F91 TestCase \u5C5E\u6027\" \u6765\u66F4\u6539\u7236\u7248\u672C\u3002
