--- a/i18n/plugins/org.talend.repository.items.importexport.nl/src/main/java/org/talend/repository/items/importexport/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.items.importexport.nl/src/main/java/org/talend/repository/items/importexport/messages_ja.properties
@@ -15,3 +15,4 @@ ImportBasicHandler_NotHrefCurrentItemFile=\u5143\u306E\u30A2\u30A4\u30C6\u30E0\u
 ImportBasicHandler_MissingItemError={0};'{1}'\u30D5\u30A1\u30A4\u30EB\u304C\u3042\u308A\u307E\u305B\u3093!;{2}
 ImportBasicHandler_LoadEMFResourceError={0};EMF\u30EA\u30BD\u30FC\u30B9\u306E\u30ED\u30FC\u30C9\u30A8\u30E9\u30FC{1}
 AbstractImportHandler_nameUsed.differentRepositoryType=\u30A2\u30A4\u30C6\u30E0\u540D\u304C\u91CD\u8907\u3057\u3066\u3044\u307E\u3059\u3002\u3054\u307F\u7BB1\u3092\u78BA\u8A8D\u3057\u3066\u4E0B\u3055\u3044\u3002
+ImportExportHandlersManager_overrideDelete=\u4E0A\u66F8\u304D\u3059\u308B\u305F\u3081\u306B\u65E2\u5B58\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u524A\u9664\u4E2D...
