--- a/i18n/plugins/org.talend.repository.items.importexport.nl/src/main/java/org/talend/repository/items/importexport/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.items.importexport.nl/src/main/java/org/talend/repository/items/importexport/messages_zh_CN.properties
@@ -15,3 +15,4 @@ ImportBasicHandler_NotHrefCurrentItemFile=\u539F\u59CB\u9879\u76EE\u6587\u4EF6\u
 ImportBasicHandler_MissingItemError={0}\uFF1B\u7F3A\u5C11 \'{1}\' \u6587\u4EF6\uFF01\uFF1B{2}
 ImportBasicHandler_LoadEMFResourceError={0}\uFF1B\u52A0\u8F7D EMF \u8D44\u6E90\u5931\u8D25\uFF1B{1}
 AbstractImportHandler_nameUsed.differentRepositoryType=\u540C\u540D\u9879\u76EE\u5DF2\u7ECF\u5B58\u5728\u3002\u68C0\u67E5\u56DE\u6536\u7AD9,\u5982\u679C\u9700\u8981,\u6E05\u7A7A\u5B83\u3002
+ImportExportHandlersManager_overrideDelete=\u5220\u9664\u5DF2\u5B58\u5728\u7684\u9879\u4EE5\u6539\u5199...
