--- a/i18n/plugins/org.talend.repository.items.importexport.ui.nl/src/main/java/org/talend/repository/items/importexport/ui/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.items.importexport.ui.nl/src/main/java/org/talend/repository/items/importexport/ui/messages_ja.properties
@@ -31,3 +31,6 @@ ShowErrorsDuringImportItemsDialog_confirmOverwrite_message=\u30D5\u30A1\u30A4\u3
 ImportItemsWizardPage_ErrorsMessage=\u30A2\u30A4\u30C6\u30E0'{0}'\u306B\u306F\u7570\u306A\u308B\u30D0\u30FC\u30B8\u30E7\u30F3\u304C\u5B58\u5728\u3057\u307E\u3059\u3002\u3054\u307F\u7BB1\u3092\u78BA\u8A8D\u3057\u3066\u5FC5\u8981\u306B\u5FDC\u3058\u3066\u7A7A\u306B\u3057\u3066\u4E0B\u3055\u3044\u3002
 ImportItemsWizardPage_ProgressDialog_ExecutingMessage=\u6E96\u5099\u4E2D...
 ImportItemsWizardPage_ProgressDialog_WaitingFinishMessage=\u6E96\u5099\u30A2\u30AF\u30B7\u30E7\u30F3\u3092\u6B63\u5E38\u306B\u4E2D\u65AD\u3067\u304D\u307E\u305B\u3093\u3002\n
+ImportItemsWizardPage_internalIdGroup=\u5185\u90E8ID
+ImportItemsWizardPage_internalIdGroup_alwaysRegenId=\u30A4\u30F3\u30DD\u30FC\u30C8\u6642\u306B\u5E38\u306BID\u3092\u751F\u6210
+ImportItemsWizardPage_internalIdGroup_keepOrigId=\u5143\u306E\u5185\u90E8ID\u3092\u4FDD\u6301
