--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_en.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_en.properties
@@ -1250,3 +1250,6 @@ DatabaseForm.hive.metastore.uris=Hive metastore uris
 XmlFileOutputStep2Form.refresh=Refresh 'Schema List' viewer
 BrowerDialog.empryUrl=the url can not be empty
 DatabaseForm.canNotUsableInDataProfiler=some database types are not usable in the Data Profiler perspective.
+XmlFileStep1Form.ImportSchemaNotExistError=Required reference schema files are missing.
+ImportTreeFromXMLAction.ImportSchemaNotExistError=Required reference schema files are missing.
+ImportTreeFromXMLAction.schemaFileNotExistDetailTitle=The following files do not exist:
