--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_fr.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_fr.properties
@@ -557,7 +557,7 @@ PaletteSettingPage.selection1=Certains composants que vous avez choisi de masque
 PaletteSettingPage.selection2=Ces composants seront automatiquement d\u00E9finis comme visibles.
 PositionalTextTest.println.fieldValue=Valeur du champ
 ProjectSettingDialog.Title=Param\u00E8tres du projet
-ProjectSettingsAction_editProject=Editer les propri\u00E9t\u00E9s du projet
+ProjectSettingsAction_editProject=Modifier les propri\u00E9t\u00E9s du projet
 ProjectSettingsWizardPage.PaletteSettings=Param\u00E8tres de la Palette
 ProjectSettingsWizardPage.VersionManagement=Gestion des Versions
 PropertiesWizardPage.Description=Description
@@ -836,9 +836,10 @@ DatabaseForm.local_service_name=Nom du service local
 DatabaseForm.sqlMode=Utiliser le mode SQL
 DatabaseForm.sqlSyntax=Syntaxe SQL
 DatabaseForm.stringConnection=Cha\u00EEne de caract\u00E8res de connexion
+DatabaseForm.stringQuote=S\u00E9parateur de cha\u00EEne de caract\u00E8res
 DatabaseForm.yes=Oui
 DatabaseTableFilterForm.allSynonyms=Tous les synonymes
-DatabaseTableFilterForm.edit=Editer...
+DatabaseTableFilterForm.edit=Modifier...
 DatabaseTableFilterForm.editFilterName=Editer le nom du filtre
 DatabaseTableFilterForm.filterName=Nom du filtre \:
 DatabaseTableFilterForm.new=Nouveau...
