--- a/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.metadata.nl/src/main/java/org/talend/repository/metadata/i18n/messages_zh_CN.properties
@@ -1250,3 +1250,6 @@ DatabaseForm.hive.metastore.uris=Hive \u5143\u5B58\u50A8 URI
 XmlFileOutputStep2Form.refresh=\u5237\u65B0 \'Schema \u5217\u8868\' \u67E5\u770B\u5668
 BrowerDialog.empryUrl=URL \u4E0D\u80FD\u4E3A\u7A7A
 DatabaseForm.canNotUsableInDataProfiler=\u67D0\u4E9B\u6570\u636E\u5E93\u7C7B\u578B\u5728 Data Profiler \u900F\u89C6\u56FE\u4E2D\u4E0D\u53EF\u7528\u3002
+XmlFileStep1Form.ImportSchemaNotExistError=\u6240\u9700 schema \u53C2\u8003\u6587\u4EF6\u7F3A\u5931\u3002
+ImportTreeFromXMLAction.ImportSchemaNotExistError=\u6240\u9700 schema \u53C2\u8003\u6587\u4EF6\u7F3A\u5931\u3002
+ImportTreeFromXMLAction.schemaFileNotExistDetailTitle=\u4EE5\u4E0B\u6587\u4EF6\u4E0D\u5B58\u5728:
