--- a/i18n/plugins/org.talend.repository.view.nl/src/messages_en.properties
+++ b/i18n/plugins/org.talend.repository.view.nl/src/messages_en.properties
@@ -23,3 +23,5 @@ RepoDoubleClickAction.wait4run=[{0}]: Studio is busy with [{1}], please wait...
 RepoDoubleClickAction.unknown=unknown work
 progress.interrupted=Work is interrupted
 progress.cancelled=Work is cancelled
+RepoDoubleClickAction.Warning=Failed to Execute {0}
+RepoDoubleClickAction.Warning.msg=Studio is busy with background jobs, please try again later.\n\n(you can find all background jobs from the Process view)
