--- a/i18n/plugins/org.talend.repository.view.nl/src/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.view.nl/src/messages_ja.properties
@@ -23,3 +23,5 @@ RepoDoubleClickAction.wait4run=[{0}]: Studio\u306F[{1}]\u3067\u30D3\u30B8\u30FC\
 RepoDoubleClickAction.unknown=\u4E0D\u660E\u306A\u4F5C\u696D
 progress.interrupted=\u4F5C\u696D\u306F\u4E2D\u65AD\u3055\u308C\u307E\u3057\u305F
 progress.cancelled=\u4F5C\u696D\u306F\u30AD\u30E3\u30F3\u30BB\u30EB\u6E08\u307F\u3067\u3059
+RepoDoubleClickAction.Warning={0}\u306E\u5B9F\u884C\u306B\u5931\u6557\u3057\u307E\u3057\u305F
+RepoDoubleClickAction.Warning.msg=Studio\u306F\u30D0\u30C3\u30AF\u30B0\u30E9\u30A6\u30F3\u30C9\u30B8\u30E7\u30D6\u306E\u5B9F\u884C\u4E2D\u306E\u305F\u3081\u3001\u5F8C\u3067\u3082\u3046\u4E00\u5EA6\u3084\u308A\u76F4\u3057\u3066\u304F\u3060\u3055\u3044\u3002\\n\\n\uFF08\u3059\u3079\u3066\u306E\u30D0\u30C3\u30AF\u30B0\u30E9\u30A6\u30F3\u30C9\u30B8\u30E7\u30D6\u306F\u30D7\u30ED\u30BB\u30B9\u30D3\u30E5\u30FC\u306B\u8868\u793A\u3055\u308C\u3066\u3044\u307E\u3059\uFF09
