--- a/i18n/plugins/org.talend.repository.view.nl/src/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.view.nl/src/messages_zh_CN.properties
@@ -23,3 +23,5 @@ RepoDoubleClickAction.wait4run=[{0}]\uFF1AStudio \u5FD9\u4E8E [{1}]\uFF0C\u8BF7\
 RepoDoubleClickAction.unknown=\u672A\u77E5\u5DE5\u4F5C
 progress.interrupted=\u5DE5\u4F5C\u5DF2\u4E2D\u65AD
 progress.cancelled=\u5DE5\u4F5C\u5DF2\u53D6\u6D88
+RepoDoubleClickAction.Warning=\u6267\u884C\u5931\u8D25 {0}
+RepoDoubleClickAction.Warning.msg=Studio \u6B63\u5728\u5904\u7406\u540E\u53F0\u4F5C\u4E1A\uFF0C\u8BF7\u7A0D\u540E\u518D\u8BD5\u3002\\n\\n (\u60A8\u53EF\u4EE5\u4ECE\u6D41\u7A0B\u8BD5\u56FE\u4E2D\u627E\u5230\u6240\u6709\u540E\u53F0\u4F5C\u4E1A)
